made small changes to template index

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 {% extends "base.html %}
 
 {% block Header %}
@@ -7,3 +9,7 @@
 {% block body %}
     These are the contents of the DrropBox app.
 {% endblock %}
+
+
+</body>
+</html>
