--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
+    {% load static %}
 <head>
+    <title>Dropbox Clone</title>
+    <link rel="stylesheet" href="{% static 'css/landingpage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 </head>
 <body>
-<h1 id = "header">DropBox Clone </h1>
+    <div class="main">
+        <div class="page-header">
+            <h1>DropBox Clone </h1>
+        </div>
+        <div class="topnav">
+            <a class="" href="#home">Home</a>
+            <a href="">My Files</a>
+            <a href="">Account</a>
+            <a href="">Logout</a>
+        </div> 
 
 
 
+
+
+
+
+        {% comment %} this is where all our date will be placed {% endcomment %}
+    </div>
+    
 </body>
 </html>
