--- a/templates/general_form.html
+++ b/templates/general_form.html
@@ -3,8 +3,13 @@
 </head>
 <body>
 <h1 id = "header">DropBox Clone </h1>
-
-
-
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
+</form>
+<br />
+<br />
+<a href="/">Return To The Homepage</a>
 </body>
 </html>
