--- a/templates/file.html
+++ b/templates/file.html
@@ -11,7 +11,7 @@
             <h1>DropBox Clone </h1>
         </div>
         <div class="topnav">
-            <a class="" href="#home">Home</a>
+            <a href="">Home</a>
             <a href="">My Files</a>
             <a href="">Account</a>
             <a href="">Logout</a>
