--- a/static/css/landingpage.css
+++ b/static/css/landingpage.css
@@ -9,6 +9,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
 }
 .page-header{
 
@@ -19,15 +20,22 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: auto;
+   
     margin-top: 15px;
-    border: 5px solid #4CAF50;
-    border-radius: 15%;
-    height: 600px;
-    width: 600px;
+    
+    width: 100%;
+    
 }
 
 .content{
+    border: 5px solid #4CAF50;
+    border-radius: 25%;
     margin: auto;
+    padding: 30px;
+
 }
 
+
+
+
+  
