--- a/templates/filelist.html
+++ b/templates/filelist.html
@@ -11,11 +11,37 @@
             <h1>DropBox Clone </h1>
         </div>
         <div class="topnav">
-            <a class="" href="#home">Home</a>
-            <a href="">My Files</a>
+            <a class="" href="/">Home</a>
+            <a href="{% url 'file-list'%}">My Files</a>
             <a href="">Account</a>
             <a href="">Logout</a>
         </div> 
+<ul>
+{% if user.is_authenticated %}
+{% load mptt_tags %}
+    {% if node is null %}
+    <p>Please upload a folder/file.</p>
+    {% endif %}
+<ul>
+    {% recursetree files %}
+        <li>
+            {{ node.filename }}
+            {% if not node.is_leaf_node %}
+                <ul class="children">
+                    {{ children }}
+                </ul>
+            {% endif %}
+        </li>
+    {% endrecursetree %}
+</ul>
+<br>
+<br>
+{% endif %}
+</ul>
+<br>
+<br>
+<a href="{% url 'file-add'%}">Add A File</a>
+<a href="{% url 'folder-add'%}">Create A Folder</a>
 
 
 
