--- a/templates/general_form.html
+++ b/templates/general_form.html
@@ -13,14 +13,14 @@
         </div>
         <div class="topnav">
             <a class="" href="#home">Home</a>
-            <a href="">My Files</a>
+            <a href="{% url 'file-list'%}">My Files</a>
             <a href="">Account</a>
             <a href="">Logout</a>
         </div> 
 
         <div>
           <h1 id = "header">DropBox Clone </h1>
-          <form action="" method="post">
+          <form action="" method="post", enctype="multipart/form-data">
               {% csrf_token %}
               {{ form.as_p }}
               <input type="submit" value="Submit">
