--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -12,7 +12,7 @@
         </div>
         <div class="topnav">
             <a href="">Home</a>
-            <a href="">My Files</a>
+            <a href="{% url 'file-list'%}">My Files</a>
             <a href="">Account</a>
             <a href="">Logout</a>
         </div> 
