completed the user account details page. Tested the display of data. Data displays within the css.

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -14,7 +14,7 @@
         <div class="topnav">
             <a href={%url "landingpage"%}>Home</a>
             <a href={%url "filelist"%}>My Files</a>
-            <a href={%url "userpage"%}>Account</a>
+            <a href={% url "userpage" id=user.id %}>Account</a>
             <a href="">Logout</a>
         </div> 
         <div class="main-body">
