--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
         <div class="topnav">
             <a href={%url "landingpage"%}>Home</a>
             <a href={% url "filelist"%}>My Files</a>
-            <a href={% url "userpage"%}>Account</a>
+            <a href="/userpage/{{request.user.id}}">Account</a>
             <a href="">Logout</a>
         </div> 
         <div class="main-body">
