--- a/templates/general_form.html
+++ b/templates/general_form.html
@@ -14,8 +14,13 @@
         <div class="topnav">
             <a href={%url "landingpage"%}>Home</a>
             <a href={% url "filelist"%}>My Files</a>
-            <a href="/userpage/{{request.user.id}}">Account</a>
-            <a href="">Logout</a>
+            <a href={% url "userpage"%}>Account</a>
+            
+            {% if user.is_authenticated%}
+            <a href="{% url 'logout' %}">Logout</a>
+            {%else%}
+            <a href="{% url 'signuppage' %}">Sign Up</a>
+            {%endif%}
         </div> 
 
         <div class="main-body">
@@ -29,7 +34,7 @@
                 </form>
                 <br />
                 <br />
-                <a href="/">Return To The Homepage</a>
+               
             </div>
         </div>
 
