--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -15,7 +15,15 @@
             <a href={%url "landingpage"%}>Home</a>
             <a href={%url "filelist"%}>My Files</a>
             <a href={%url "userpage"%}>Account</a>
-            <a href="{% url 'logout' %}"><button>Logout</button></a>
+            
+            {% if user.is_authenticated%}
+            <a href={% url "logout"%}>Logout</a>
+            {% else %}
+            <a href={%url "signuppage"%}>Sign Up</a>
+            {%endif%}
+            
+            
+            
         </div> 
         {% if user.is_authenticated%}
         <div class="main-body">
