--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -13,7 +13,7 @@
         <div class="topnav">
             <a href={%url "landingpage"%}>Home</a>
             <a href={% url "filelist"%}>My Files</a>
-            <a href={% url "userpage"%}>Account</a>
+            <a href={%"/userpage/{{request.user.id"/userpage/{{request.user.id}}}"%}>Account</a>
             {% if user.is_authenticated%}
             <a href="{% url 'logout' %}">Logout</a>
             {%else%}
