--- a/templates/500.html
+++ b/templates/500.html
@@ -14,7 +14,11 @@
             <a href={%url "landingpage"%}>Home</a>
             <a href={% url "filelist"%}>My Files</a>
             <a href="/userpage/{{request.user.id}}">Account</a>
-            <a href="">Logout</a>
+            {%if user.is_authenticated%}
+            <a href={%url "logout"%}>Logout</a>
+            {% else %}
+            <a href={% url "signuppage"%}>Sign Up</a>
+            {% endif %}
         </div> 
         <div class="main-body">
             <div class="content">
