--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -15,12 +15,16 @@
             <a href={%url "landingpage"%}>Home</a>
             <a href={%url "filelist"%}>My Files</a>
             <a href="/userpage/{{request.user.id}}">Account</a>
-            <a href="">Logout</a>
+            {%if user.is_authenticated%}
+            <a href={%url "logout"%}>Logout</a>
+            {% else %}
+            <a href={% url "signuppage"%}>Sign Up</a>
+            {% endif %}
         </div> 
         <div class="main-body">
             <div class="content">
                 <h1>
-                    Welcome to our <b><u style="color: #4CAF50">Dropbox Clone</u></b>!
+                    Welcome {{dropbox_user.username}} to our <b><u style="color: #4CAF50">Dropbox Clone</u></b>!
                 </h1>
                 <p>
                     Created by Mike, Mustafa, and Koren!
