--- a/templates/general_form.html
+++ b/templates/general_form.html
@@ -26,14 +26,14 @@
             <div class="content">
             
                 <h1 id = "header">DropBox Clone </h1>
-                <form action="" method="post", enctype="multipart/form-data">
+                <form action="" method="post", enctype="multipart/form-data" align="center">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" value="Submit">
                 </form>
                 <br />
                 <br />
-                <a href="/">Return To The Homepage</a>
+               
             </div>
         </div>
 
