--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -24,7 +24,7 @@
         <div class="main-body">
             <div class="content">
                 <h1>
-                    Welcome {{dropbox_user.username}} to our <b><u style="color: #4CAF50">Dropbox Clone</u></b>!
+                    Welcome <b><u style="color: #4CAF50">{{user.username}}</u></b> to our Dropbox Clone!
                 </h1>
                 <p>
                     Created by Mike, Mustafa, and Koren!
