--- a/templates/500.html
+++ b/templates/500.html
@@ -4,6 +4,7 @@
     <title>Dropbox Clone</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/landingpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class="main">
@@ -22,7 +23,11 @@
         </div> 
         <div class="main-body">
             <div class="content">
-                <h1> 500 Currently Unavailable</h1>
+                <h1 class="content-header">We're So Sorry!</h1> 
+                <img style='width:260px' src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Cog-scripted-svg-green.svg/1200px-Cog-scripted-svg-green.svg.png'/>
+                <h2 class="content-header">Currently Unavailable</h2>
+                <p class="content-header">(500 Error!)</p>
+
             </div>
         </div>
 
