--- a/templates/filelist.html
+++ b/templates/filelist.html
@@ -4,32 +4,35 @@
     <title>Dropbox Clone</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/landingpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class="main">
         <div class="page-header">
             <h1>DropBox Clone </h1>
         </div>
-        <div class="topnav">
-            <a href={%url "landingpage"%}>Home</a>
-            <a href={% url "filelist"%}>My Files</a>
-            <a href="/userpage/{{request.user.id}}">Account</a>
+          <div class="topnav">
+            <a href={%url "landingpage"%} class="content-header">Home</a>
+            <a href={%url "filelist"%} class="content-header">My Files</a>
             {%if user.is_authenticated%}
-            <a href={%url "logout"%}>Logout</a>
+            <a href="/userpage/{{request.user.id}}" class="content-header">Account</a>
+            <a href={%url "logout"%} class="content-header">Logout</a>
             {% else %}
-            <a href={% url "signuppage"%}>Sign Up</a>
+            <a href={% url "signuppage"%} class="content-header">Sign Up</a>
             {% endif %}
-        </div> 
+        </div>  
         <div class="main-body">
             <div class="content">
-                <h1>My Files:</h1>
+                <h1 class="content-header">My Files:</h1>
+
+                <hr>
             
 
 {% if user.is_authenticated %}
 {% load mptt_tags %}
     {% recursetree files %}
-        
+        <div style="font-family: 'Monda', sans-serif">
         {% if node.uploaded_file %}
             <a href="/files/{{node.uploaded_file}}"><div>&#128240;{{ node.filename }}</div></a> 
             <a href="/file/edit/{{node.pk}}"><button>&#9998;Edit</button></a> 
@@ -44,7 +47,7 @@
                     {{ children }}
                 </ul>
             {% endif %}
-        
+    </div>
     {% endrecursetree %}
 
 <br>
@@ -53,10 +56,10 @@
 
 <br>
 <br>
-<a href="{% url 'file-add'%}"><button>Add A File</button></a>
-<a href="{% url 'folder-add'%}"><button>Create A Folder</button></a>
+<a href="{% url 'file-add'%}"><button>&#65291; File</button></a>
+<a href="{% url 'folder-add'%}"><button>&#65291; Folder</button></a>
     </div>
-    </div>
+    </>
     </div>
     
 </body>
