--- a/templates/404.html
+++ b/templates/404.html
@@ -4,25 +4,29 @@
     <title>Dropbox Clone</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/landingpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class="main">
         <div class="page-header">
             <h1>DropBox Clone </h1>
         </div>
-        <div class="topnav">
-            <a href={%url "landingpage"%}>Home</a>
-            <a href={% url "filelist"%}>My Files</a>
-            <a href="/userpage/{{request.user.id}}">Account</a>
+         <div class="topnav">
+            <a href={%url "landingpage"%} class="content-header">Home</a>
+            <a href={%url "filelist"%} class="content-header">My Files</a>
             {%if user.is_authenticated%}
-            <a href={%url "logout"%}>Logout</a>
+            <a href="/userpage/{{request.user.id}}" class="content-header">Account</a>
+            <a href={%url "logout"%} class="content-header">Logout</a>
             {% else %}
-            <a href={% url "signuppage"%}>Sign Up</a>
+            <a href={% url "signuppage"%} class="content-header">Sign Up</a>
             {% endif %}
         </div> 
         <div class="main-body">
             <div class="content">
-            <h1> 404 Page Not Found </h1>
+            <h1 class="content-header">UH-OH, 404!</h1>
+            <img style="width:260px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Smiley_green_alien_cry.svg/1200px-Smiley_green_alien_cry.svg.png" />
+            <h1 class="content-header"> That Page Doesn't Exist! </h1>
             </div>
         </div>
 
