--- a/templates/general_form.html
+++ b/templates/general_form.html
@@ -4,6 +4,8 @@
     <title>Dropbox Clone</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/landingpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
@@ -11,22 +13,22 @@
         <div class="page-header">
             <h1>DropBox Clone </h1>
         </div>
-        <div class="topnav">
-            <a href={%url "landingpage"%}>Home</a>
-            <a href={% url "filelist"%}>My Files</a>
-            <a href="/userpage/{{request.user.id}}">Account</a>
+         <div class="topnav">
+            <a href={%url "landingpage"%} class="content-header">Home</a>
+            <a href={%url "filelist"%} class="content-header">My Files</a>
             {%if user.is_authenticated%}
-            <a href={%url "logout"%}>Logout</a>
+            <a href="/userpage/{{request.user.id}}" class="content-header">Account</a>
+            <a href={%url "logout"%} class="content-header">Logout</a>
             {% else %}
-            <a href={% url "signuppage"%}>Sign Up</a>
+            <a href={% url "signuppage"%} class="content-header">Sign Up</a>
             {% endif %}
-        </div> 
+        </div>  
 
         <div class="main-body">
             <div class="content">
             
-                <h1 id = "header">DropBox Clone </h1>
-                <form action="" method="post", enctype="multipart/form-data" align="center">
+                <h1 class="content-header">DropBox Clone </h1>
+                <form style="font-family: 'Monda', sans-serif" action="" method="post", enctype="multipart/form-data" align="center">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" value="Submit">
