--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -4,6 +4,8 @@
     <title>Dropbox Clone</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/landingpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class="main">
@@ -11,28 +13,29 @@
             <h1>DropBox Clone </h1>
         </div>
         <div class="topnav">
-            <a href={%url "landingpage"%}>Home</a>
-            <a href={% url "filelist"%}>My Files</a>
-            <a href="/userpage/{{request.user.id}}">Account</a>
+            <a href={%url "landingpage"%} class="content-header">Home</a>
+            <a href={% url "filelist" %} class="content-header">My Files</a>
+            <a href="/userpage/{{request.user.id}}" class="content-header">Account</a>
             {%if user.is_authenticated%}
-            <a href={%url "logout"%}>Logout</a>
+            <a href={%url "logout"%} class="content-header">Logout</a>
             {% else %}
-            <a href={% url "signuppage"%}>Sign Up</a>
+            <a href={% url "signuppage"%} class="content-header">Sign Up</a>
             {% endif %}
         </div>
         <div class="main-body">
             <div class="content">
-                <h1> {{request.user}}'s info: </h1>
-                <p>Display Name: {{dropbox_user.username}} </p>
-                <p>Email: {{dropbox_user.email}} </p>
-                <p>File List: </p>
+                <h1 class="content-header"> <b style="color: #449d48" >{{request.user}}s</b> info: </h1>
+                <hr>
+                <p style="font-family: 'Monda', sans-serif"><b>Display Name: </b> {{dropbox_user.username}} </p>
+                <p style="font-family: 'Monda', sans-serif"><b>Email: </b>{{dropbox_user.email}} </p>
+                <p style="font-family: 'Monda', sans-serif"><b>File List:</b> </p>
                 {% for file in filename %}
                 <ul>
                     {{file.filename}}
                     {{file.uploaded_file}}
                 </ul>
                 {% endfor %}
-                <p>Account created on: <br>{{dropbox_user.created_at}}</p>
+                <p style="font-family: 'Monda', sans-serif"><b>Account created on: </b><br>{{dropbox_user.created_at}}</p>
                 
             </div>
         </div>
