finishing touches for css

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -37,7 +37,7 @@
                 <div style="font-family: 'Monda', sans-serif">Dropbox is essentially cloud storage where you can store you files, images, and folders and download them on other devices.</div> 
                 </div>
                 <div class="creators">
-                <p><h2 class="content-header">Creators:</h2></p>
+                <p><h2 class="content-header">The Green Team:</h2></p>
                 <hr>
                 <div style="font-family: 'Monda', sans-serif">
                     <h4>Mustafa</h4>
@@ -54,7 +54,7 @@
                         <br/>
                         "We wanted to learn and understand how to create a very applicable mptt database, for future reference and to be able to create similar apps." -Mustafa</li>
                         <br/>
-                        "MIKES REASON HERE" - Mike
+                        "We wanted to develop an application that served a business purpose and provides value to a future employer." - Mike
                     </div>
                       
                 </div>
