--- a/templates/500.html
+++ b/templates/500.html
@@ -12,13 +12,13 @@
             <h1>DropBox Clone </h1>
         </div>
         <div class="topnav">
-            <a href={%url "landingpage"%}>Home</a>
-            <a href={% url "filelist"%}>My Files</a>
-            <a href="/userpage/{{request.user.id}}">Account</a>
+            <a href={%url "landingpage"%} class="content-header">Home</a>
+            <a href={%url "filelist"%} class="content-header">My Files</a>
             {%if user.is_authenticated%}
-            <a href={%url "logout"%}>Logout</a>
+            <a href="/userpage/{{request.user.id}}" class="content-header">Account</a>
+            <a href={%url "logout"%} class="content-header">Logout</a>
             {% else %}
-            <a href={% url "signuppage"%}>Sign Up</a>
+            <a href={% url "signuppage"%} class="content-header">Sign Up</a>
             {% endif %}
         </div> 
         <div class="main-body">
