--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -28,13 +28,8 @@
                 <hr>
                 <p style="font-family: 'Monda', sans-serif"><b>Display Name: </b> {{dropbox_user.username}} </p>
                 <p style="font-family: 'Monda', sans-serif"><b>Email: </b>{{dropbox_user.email}} </p>
-                <p style="font-family: 'Monda', sans-serif"><b>File List:</b> </p>
-                {% for file in filename %}
-                <ul>
-                    {{file.filename}}
-                    {{file.uploaded_file}}
-                </ul>
-                {% endfor %}
+                <p style="font-family: 'Monda', sans-serif"><b>File Count:</b> </p>
+                {{filename}}
                 <p style="font-family: 'Monda', sans-serif"><b>Account created on: </b><br>{{dropbox_user.created_at}}</p>
                 
             </div>
